# zero2prod

./: .env  .gitignore  Cargo.toml
.github/workflows/: general.yml
scripts/: init_db.sh
src/: main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
