[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Andrew Northall <andrew@northall.me.uk", "Luca Palmieri <contact@lpalmieri.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = "0.11"
